@@ -96,6 +96,7 @@ int isreg PARAMS((unsigned char *s));
  * which match the pattern 'pattern'
  */
 unsigned char **rexpnd PARAMS((unsigned char *word));
+unsigned char **rexpnd_users PARAMS((unsigned char *word));
 
 int chpwd PARAMS((unsigned char *path));
 unsigned char *pwd PARAMS((void));
