@@ -11,6 +11,9 @@ Wed Mar 16 11:04:19 EST 2005
 	   many things unless ~ is really part of the file
 	   name).
 
+	Make tab completion work for user names.
+	uname() was shadowing a system call.
+
 Tue Mar 15 14:18:53 EST 2005
 
 	Fix processing of joe.1.in -> joe.1 so
